--- a/tasks/core-setup.yml
+++ b/tasks/core-setup.yml
@@ -32,6 +32,11 @@
     - core
     - emacs
 
+- name: Create ~/.local/bin if it does not exist
+  ansible.builtin.file:
+    path: ~/.local/bin/fd
+    state: directory
+    mode: "0755"
+
 - name: Symlink fd-find to fd
-  become: true
   shell: ln -s $(which fdfind) ~/.local/bin/fd
